style.css
body{
  font-family: 'Atkinson Hyperlegible', sans-serif;
  padding:0;
  margin: 0;
}

.game_start{
  background-color: #152938;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.game_board {
  background-color: #ffffff;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.game_board-header {
  /* border: 1px solid #304859; */
  margin: 3rem auto;
  display: flex;
  min-width: 19rem;
}

.game_board-header-controls {
  display: inline;
  margin-left: auto;
}

.game_board-header p {
  display: inline;
  align-self: start;
}
.restart {
  margin-right: 0.5rem;
  background-color: #fda214;
  color: #fff;
  border-radius: 1rem;
  padding: 0.3rem 0.9rem;
  font-size: 0.7rem;
  font-weight: 700;
}

.restart:hover {
  cursor: pointer;
}

.new_game {
  background-color: #f2f2f2;
  color: #304859;
  border-radius: 1rem;
  padding: 0.3rem 0.9rem;
  font-size: 0.7rem;
  font-weight: 700;
}

.new_game:hover {
  cursor: pointer;
}

.logo {
  align-self: start;
  width: 5rem;
  margin: auto 0;
}

.icon {
  font-size: 1.4rem;
  width: 30px;
  height: 30px;
  border-radius: 50%;
  padding: 0.4rem;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0.2rem 0.2rem;
  background: #304859;
  color: #fff;
}

.icon:focus{
  outline: none;
}

.icons {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  max-width: 20rem;
  margin: 0 auto;
  align-items: space-between;
}

.icon:hover {
  cursor: pointer;
}

.numbers {
  font-weight: 700;
}

.cover {
  background: #304859;
  transition: all 500ms ease-in;
}

.cover_text {
  color: #304859;
  transition: all 500ms ease-in;
}

.disabledbutton_text {
  color: #fff;
  /* transition: all 100ms ease-in; */
}

.disabledbutton {
  pointer-events: none;
  opacity: 0.4;
  color: #304859;
  background: #7191a5;
  transition: all 500ms ease-in;
}

.disabledbtntemp {
  pointer-events: none;
}

.selected {
  background-color: #fda214;
  transition: all 500ms ease-in;
}

.in_game_info {
  margin: 3rem auto;
  display: flex;
  min-width: 18rem;
}

.time_container,
.moves_container {
  background: #f2f2f2;
  border-radius: 0.3rem;
  width: 50%;
  padding: 0.002px 0.8rem;
}

.time_container {
  margin-top: 2rem;
  margin-right: 1rem;
}

.moves_container {
  margin-top: 2rem;
  margin-left: auto;
}

.text {
  width: 100%;
  display: flex;
  align-items: center;
  font-size: 0.8rem;
}

.time,
.moves {
  margin-left: auto;
  font-size: 1.2rem;
  font-weight: 700;
}

/* while we get bigger */
@media only screen and (min-width: 320px) {
  .game_board-header{
    min-width: 22rem;
  }
}
@media only screen and (min-width: 400px) {
  .game_board-header{
min-width: 30rem;
  }
}

.visible {
  display: block;
}


.hidden {
  display: none;
}

